# forza

./: .gitignore  .plan_breadcrumb.md  .review_breadcrumb.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  forza.toml  release-plz.toml  runner.toml  tricky-bugs.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release-plz.yml  release.yml
action/: action.yml  entrypoint.sh
action/examples/: forza-configless.yml  forza.yml
crates/forza/: CHANGELOG.md  Cargo.toml  build.rs
crates/forza-core/: CHANGELOG.md  Cargo.toml
crates/forza-core/src/: condition.rs  error.rs  lib.rs  lifecycle.rs  pipeline.rs  planner.rs  route.rs  run.rs  shell.rs  stage.rs  subject.rs  testing.rs  tools.rs  traits.rs
crates/forza-core/src/commands/: draft_pr.sh  merge.sh
crates/forza-core/src/prompts/: cmd_plan.md  cmd_plan_revise.md  implement.md  init_auto.md  init_guided.md  open_issue.md  open_pr.md  plan.md  pr_review.md  pr_revise_pr.md  review.md  test.md  triage.md
crates/forza-core/src/tools/: clarify.txt  implement.txt  open_pr.txt  research.txt  review.txt  revise_pr.txt  test.txt
crates/forza-core/src/v2/: COHORT_A.txt  COHORT_B.txt
crates/forza-core/tests/: pipeline_integration.rs
crates/forza-test-fixture/: Cargo.toml
crates/forza-test-fixture/src/: lib.rs
crates/forza/src/: adapters.rs  api.rs  config.rs  deps.rs  executor.rs  lib.rs  main.rs  mcp.rs  plan.rs  planner.rs  runner.rs  state.rs  workflow.rs
crates/forza/src/context_templates/: go.md  node.md  python.md  rust.md
crates/forza/src/git/: cli.rs  gix_client.rs  mod.rs
crates/forza/src/github/: gh_cli.rs  mod.rs  octocrab_client.rs
crates/forza/src/orchestrator/: helpers.rs  mod.rs
crates/forza/src/prompts/: clarify.md  implement.md  init_auto.md  init_guided.md  plan.md  pr_fix_ci.md  research.md  review.md
crates/forza/tests/: orchestrator.rs
design/: github-action.md  principles.md  refactor-v2.md  run-route-filter.md
docs/: book.toml
docs/book/: 404.html  contributing.html  getting-started.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-39616064.js  toc-92948abe.js  toc.html
docs/book/advanced/: api.html  custom-workflows.html  mcp.html  overview.html  self-hosting.html
docs/book/concepts/: architecture.html  breadcrumbs.html  layers.html  lifecycle.html  overview.html  routes.html  stage-kinds.html  what-forza-isnt.html  workflows.html
docs/book/configuration/: examples.html  overview.html  reference.html
docs/book/usage/: cli-reference.html  overview.html  security.html  workflow-patterns.html  writing-issues.html
docs/src/: SUMMARY.md  contributing.md  getting-started.md  introduction.md
docs/src/advanced/: api.md  custom-workflows.md  mcp.md  overview.md  self-hosting.md
docs/src/concepts/: architecture.md  breadcrumbs.md  layers.md  lifecycle.md  overview.md  routes.md  stage-kinds.md  what-forza-isnt.md  workflows.md
docs/src/configuration/: examples.md  overview.md  reference.md
docs/src/usage/: cli-reference.md  overview.md  security.md  workflow-patterns.md  writing-issues.md
examples/: minimal.toml  multi-repo.toml  pr-maintenance.toml  runner.toml  rust-project.toml  security-strict.toml
examples/workflows/: forza-auto.yml  forza-schedule.yml  forza-targeted.yml
src/: api.rs  config.rs  deps.rs  error.rs  executor.rs  github.rs  isolation.rs  lib.rs  main.rs  mcp.rs  notifications.rs  orchestrator.rs  planner.rs  policy.rs  state.rs  triage.rs  workflow.rs
src/git/: cli.rs  gix_client.rs  mod.rs
src/github/: gh_cli.rs  mod.rs  octocrab_client.rs
src/orchestrator/: helpers.rs  mod.rs
src/prompts/: comment.md  open_pr.md  pr_fix_ci.md  pr_merge.md  pr_review.md  pr_revise_pr.md  reactive_fix_ci.md  reactive_revise_pr.md  research.md  review.md  test.md
test-helpers/: fake-claude.sh  fake-gh.sh  gh
tests/: orchestrator.rs
tests/integration/: test-quick-workflow.sh
