[package]
name = "forza"
version = "0.2.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Configurable workflow orchestrator for agent driven software development"
repository = "https://github.com/joshrotenberg/forza"
keywords = ["github", "automation", "issues", "pull-requests", "ci"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
tower-mcp = { version = "0.9", features = ["http"] }
schemars = "1"
claude-wrapper = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "sync", "signal", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-tokio", "http1", "tls12"] }
regex = "1"
axum = "0.8"
async-trait = "0.1.89"
octocrab = "0.49.5"
gix = "0.80.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "forza"
path = "src/main.rs"

[lib]
name = "forza"
path = "src/lib.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
