[workspace]
members = ["crates/forza", "crates/forza-core"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/forza"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
