[workspace]
members = ["crates/forza", "crates/forza-core"]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/forza"

[workspace.dependencies]
# shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1.89"
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"
tokio = { version = "1", features = ["process", "fs"] }
tempfile = "3"
# forza

forza-core = { path = "crates/forza-core", version = "0.5.0" }

tower-mcp = { version = "0.9", features = ["http"] }
schemars = "1"
claude-wrapper = "0.4"
codex-wrapper = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-tokio", "http1", "tls12"] }
regex = "1"
axum = "0.8"
octocrab = "0.49.5"
gix = "0.80.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
