[package]
name = "forza-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Core abstractions for forza — workflow orchestrator for agent-driven development"
repository = "https://github.com/joshrotenberg/forza"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1.89"
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"
tokio = { version = "1", features = ["process", "fs"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
