[package]
name = "forza"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Configurable workflow orchestrator for agent driven software development"
repository.workspace = true
keywords = ["github", "automation", "issues", "pull-requests", "ci"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
forza-core = { workspace = true }
indexmap = { workspace = true }
tower-mcp = { workspace = true }
schemars = { workspace = true }
claude-wrapper = { workspace = true }
codex-wrapper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "signal", "time", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
octocrab = { workspace = true }
gix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "forza"
path = "src/main.rs"

[lib]
name = "forza"
path = "src/lib.rs"
